Project/fasto/tests/div.out
3 0 -2 3 Interpreter error: Error: Division by zero at line 2, column 7


